# stp_pico_master

./: .clang-format  .gitignore  CMakeLists.txt  nyoba.py  useful_command.zsh
include/: lv_app.h  lv_colors.h  lv_conf.h  lv_drivers.h
lib/ClickEncoder/: CMakeLists.txt  ClickEncoder.cpp  ClickEncoder.h  click_encoder.cpp  click_encoder.h
lib/ili9486_drivers/: CMakeLists.txt  ili9486_commands.h  ili9486_drivers.cpp  ili9486_drivers.h
lib/lvgl/src/misc/: lv_timer.c
lib/modbus_master/: CMakeLists.txt  modbus_master.cpp  modbus_master.h
lib/pzem/: CMakeLists.txt  pzem017.cpp  pzem017.h
lib/rs485_slaves/: CMakeLists.txt  esp32.cpp  esp32.h  pzem016.cpp  pzem016.h  pzem017.cpp  pzem017.h
lib/xpt2046/: CMakeLists.txt  xpt2046.cpp  xpt2046.h
server/: index.js  package-lock.json  package.json  setup-db.js
server/config/: db.js  schema.sql
server/controllers/: readings.controller.js
server/models/: readings.model.js
server/routes/: readings.routes.js
src/: STP_SPLASH.c  hmi_pico_stp.cpp  lv_app.cpp  lv_drivers.cpp  plc_utility.hpp
